src/test/deca/context/invalid/test_error_string.deca
// Description:
//    un string ne peut pas être instanciée de cette maninière
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 :  type indéfini
//
// Historique:
//      cree le 06/01/2022

{
    String s = "toto";
}
